fix alignment 04

--- a/packages/bpk-component-breadcrumb/src/BpkBreadcrumbItem.module.scss
+++ b/packages/bpk-component-breadcrumb/src/BpkBreadcrumbItem.module.scss
@@ -26,6 +26,7 @@
 
   &__link {
     @include typography.bpk-text;
+    margin-top: tokens.bpk-spacing-base() * 0.125;
   }
 
   &__active-item {
